@@ -151,7 +151,7 @@ class PlantationServiceImplTest {
         List<PlantationDTO> result = plantationService.findAll();
 
         assertEquals(1, result.size());
-        assertEquals(1L, result.getFirst().getId());
+        assertEquals(1L, result.get(0).getId());
     }
 
     // ---------- FIND ALL PAGED ----------
